# photoguru

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  Google_Fotos.txt  LICENSE  MVP_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  adobe.txt  agent_mvp.py  build.sh  crash.txt  crash_report.txt  generate_metadata_panel.py  requirements.txt  requirements_mvp.txt  run_tests.sh  test_clip_quick.cpp  test_clip_simple  test_clip_simple.cpp  test_metadata_write_simple.cpp  test_write_metadata.cpp  test_write_metadata.sh  test_write_simple.sh  |
docs/: BUGS_FIXED.md  BUG_ANALYSIS.md  CLIP_INFERENCE_FIXED.md  EXECUTIVE_SUMMARY.md  EXIFTOOL_DAEMON.md  GOOGLE_TAKEOUT_IMPLEMENTATION.md  GOOGLE_TAKEOUT_IMPORT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LOCAL_AI_IMPLEMENTATION.md  LOCAL_AI_SETUP.md  LOCAL_AI_STATUS.md  METADATA_PANEL_REFACTOR.md  MVP_IMPLEMENTATION.md  MVP_STATUS.md  MVP_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PHASE1_COMPLETE.md  PROJECT_SUMMARY.md  PYTHON_REMOVAL_SUMMARY.md  PYTHON_TO_CPP_MIGRATION.md  QUICK_START_MVP.md  README.md  ROADMAP.md  TESTING_STRATEGY.md  TEST_COVERAGE_ANALYSIS.md  UX_UI_ANALYSIS.md  UX_UI_IMPLEMENTATION.md
python/: README.md  agent_v2.py
resources/: Info.plist  resources.qrc
scripts/: analyze_test_coverage.py  benchmark_exiftool.py  benchmark_performance.py  build.sh  check_dependencies.sh  download_models.sh
src/: main.cpp
src/core/: ExifToolDaemon.cpp  ExifToolDaemon.h  GoogleTakeoutImporter.cpp  GoogleTakeoutImporter.h  GoogleTakeoutParser.cpp  GoogleTakeoutParser.h  ImageLoader.cpp  ImageLoader.h  Logger.cpp  Logger.h  MetadataReader.cpp  MetadataWriter.cpp  MetadataWriter.h  PhotoDatabase.cpp  PhotoDatabase.h  PhotoMetadata.h  ThumbnailCache.cpp  ThumbnailCache.h
src/ml/: CLIPAnalyzer.cpp  CLIPAnalyzer.h  LlamaVLM.cpp  LlamaVLM.h  LlamaVLM_old.cpp  ONNXInference.cpp  ONNXInference.h  PythonAnalysisWorker.cpp  PythonAnalysisWorker.h  PythonBridge.cpp  PythonBridge.h
src/ui/: AnalysisPanel.cpp  AnalysisPanel.h  DarkTheme.h  FilterPanel.cpp  FilterPanel.h  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  MapView.cpp  MapView.h  MetadataPanel.cpp  MetadataPanel.cpp.backup  MetadataPanel.cpp.broken  MetadataPanel.h  MetadataPanel_COMPLETE.cpp  MetadataPanel_new.cpp  NotificationManager.cpp  NotificationManager.h  NotificationToast.cpp  NotificationToast.h  SKPBrowser.cpp  SKPBrowser.h  SemanticSearch.cpp  SemanticSearch.h  ThumbnailGrid.cpp  ThumbnailGrid.h  TimelineView.cpp  TimelineView.h
tests/: main.cpp  test_analysis_panel.cpp  test_analysis_panel_actions.cpp  test_analysis_panel_buttons.cpp  test_analysis_panel_checkboxes.cpp  test_clip_analyzer.cpp  test_exiftool_daemon.cpp  test_filter_criteria.cpp  test_filter_panel.cpp  test_image_loader.cpp  test_image_viewer.cpp  test_llama_vlm.cpp  test_main_window.cpp  test_map_view.cpp  test_metadata_panel.cpp  test_metadata_reader.cpp  test_metadata_writer.cpp  test_onnx_basic.cpp  test_photo_database.cpp  test_python_analysis_worker.cpp  test_semantic_search.cpp  test_skp_browser.cpp  test_thumbnail_cache.cpp  test_thumbnail_grid.cpp  test_timeline_view.cpp
tests/integration/: test_clip_integration.cpp  test_vlm_integration.cpp
